--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/* Slider */
+.carousel-inner,
+.carousel-item {
+  height: 100vh;
+}
 
+.carousel-item img {
+  height: 100%;
+  object-fit: cover;
+}
 
 /*# sourceMappingURL=style.css.map */
