--- a/style.css
+++ b/style.css
@@ -9,4 +9,10 @@
   object-fit: cover;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
 /*# sourceMappingURL=style.css.map */
