--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
   height: 300px;
   object-fit: cover;
 }
-// .card-img {
-//   height: 100%;
-//   object-fit: cover;
-// }
+.card-img {
+  height: 40vh;
+  object-fit: cover;
+}
