--- a/style.scss
+++ b/style.scss
@@ -19,3 +19,11 @@
   height: 40vh;
   object-fit: cover;
 }
+.w-100 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.ideas .card-title {
+  color: white;
+  font-size: 30px;
+}
