add Bootstrap card to services section

--- a/style.scss
+++ b/style.scss
@@ -28,8 +28,7 @@
   font-size: 30px;
 }
 
-.services .col-md-4:first-child{
-  height: 100px;
-  background: green;
-  
-}
+// .services .col-md-4:first-child {
+//   height: 100px;
+//   background: green;
+// }
