--- a/style.css
+++ b/style.css
@@ -34,4 +34,32 @@
   background: #eff2f5;
 }
 
+.contact ul {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0;
+}
+
+.contact a {
+  display: flex;
+  width: 16px;
+  height: 16px;
+  font-size: 0;
+  color: black;
+}
+
+.contact li {
+  font-size: 0;
+  display: flex;
+  padding: 10px 10px 10px 0;
+}
+
+.contact i {
+  font-size: 16px;
+  color: black;
+}
+
 /*# sourceMappingURL=style.css.map */
