--- a/style.css
+++ b/style.css
@@ -30,8 +30,13 @@
   font-size: 30px;
 }
 
+/* Contact */
 .contact {
   background: #eff2f5;
+}
+
+.contact .card-subtitle {
+  margin-top: 20px;
 }
 
 .contact ul {
@@ -65,6 +70,11 @@
 .contact .card-body {
   border-style: none;
   background: #eff2f5;
+}
+
+.contact .card-link {
+  color: blue;
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
