--- a/style.css
+++ b/style.css
@@ -70,11 +70,16 @@
 .contact .card-body {
   border-style: none;
   background: #eff2f5;
+  padding: 0;
 }
 
 .contact .card-link {
   color: blue;
   font-size: 16px;
+}
+
+.contact .form-group h6 {
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
