--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@
   object-fit: cover;
 }
 
+.carousel-caption {
+  right: auto;
+  bottom: auto;
+  padding-bottom: 0;
+  padding-top: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .card-img-top {
   width: 100%;
   height: 300px;
@@ -88,7 +98,7 @@
 
 /* Footer */
 .footer {
-  background: #CCFFFF;
+  background: #ccffff;
 }
 
 /*# sourceMappingURL=style.css.map */
